add nav styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="nav">
   <a routerLink="/" class="nav-link">DashBoard</a>
   <a routerLink="/job" class="nav-link">Job</a>
   <a routerLink="/vehicle" class="nav-link">Vehicle</a>
