add mat toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<nav class="nav">
+<mat-toolbar class="nav">
   <a routerLink="/" class="nav-link">DashBoard</a>
   <a routerLink="/job" class="nav-link">Job</a>
   <a routerLink="/vehicle" class="nav-link">Vehicle</a>
   <a routerLink="/declutter" class="nav-link">Declutter</a>
-</nav>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
