--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
-<p>dashboard works!</p>
+<div class="body">
+    <app-goal-card class='dashboard-card' *ngFor="let card of goalCards" [cardData]="card"></app-goal-card>
+</div>
