--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="nav">
-  <a routerLink="/" class="nav-link">DashBoard</a>
+  <a routerLink="/" class="nav-link">Dashboard</a>
   <a routerLink="/job" class="nav-link">Job</a>
   <a routerLink="/vehicle" class="nav-link">Vehicle</a>
   <a routerLink="/declutter" class="nav-link">Declutter</a>
