--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,20 @@
 <div class="body">
-    <app-goal-card class='dashboard-card' *ngFor="let card of goalCards" [cardData]="card"></app-goal-card>
+    <div class="card-row">
+        <app-goal-card class='dashboard-card' *ngFor="let card of goalCards" [cardData]="card"></app-goal-card>
+    </div>
+
+    <div>
+        <form>
+            <mat-form-field>
+                <mat-label>New Idea</mat-label>
+                <input matInput type="text" placeholder="Learn to sew" (input)="updateNewText($event)">
+            </mat-form-field>
+            <button [disabled]="addDisabled" (click)="addItem()">Add</button>
+        </form>
+    </div>
+
+    <div>
+        <app-list-item *ngFor="let item of items" [itemData]="item"></app-list-item>
+    </div>
+
 </div>
