feat: add inbox triage goals

--- a/src/app/shared/list-item/list-item.component.html
+++ b/src/app/shared/list-item/list-item.component.html
@@ -1,5 +1,9 @@
 <div class="list-item">
     <p>{{ itemData?.createdAt }} &NonBreakingSpace;</p>
     <p>{{ itemData?.text }} &NonBreakingSpace;</p>
+    <button (click)="convertToJobAction()">Job</button>
+    <button (click)="convertToVehicleAction()">Vehicle</button>
+    <button (click)="convertToDeclutterAction()">Declutter</button>
+
     <button>Done</button>
 </div>
