--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,8 +1,4 @@
 <div class="body">
-    <div class="card-row">
-        <app-goal-card class='dashboard-card' *ngFor="let card of goalCards" [cardData]="card"></app-goal-card>
-    </div>
-
     <div>
         <form>
             <mat-form-field>
@@ -12,9 +8,14 @@
             <button [disabled]="addDisabled" (click)="addItem()">Add</button>
         </form>
     </div>
+    <h2>Inbox ({{ inboxCount }})</h2>
 
     <div>
         <app-list-item *ngFor="let item of items" [itemData]="item"></app-list-item>
+    </div>
+
+    <div class="card-row">
+        <app-goal-card class='dashboard-card' *ngFor="let card of goalCards" [cardData]="card"></app-goal-card>
     </div>
 
 </div>
