--- a/src/app/shared/goal-card/goal-card.component.html
+++ b/src/app/shared/goal-card/goal-card.component.html
@@ -1,13 +1,15 @@
 <mat-card appearance="outlined">
     <mat-card-header>
-        <h3>{{ cardData?.title }}</h3>
+        <h3>{{ cardData?.title }} ({{ actionsLength }})</h3>
     </mat-card-header>
     <mat-card-content>
         Why: {{ cardData?.why }}
     </mat-card-content>
     <mat-card-content>
-        Next Action:
-        {{ cardData?.nextAction }}
+        Next Actions:
+        <div class="action-list">
+            <p *ngFor="let action of cardData?.nextActions | slice:0:3">{{ action.text }}</p>
+        </div>
     </mat-card-content>
     <mat-card-actions>
         <button onclick="alert()">Start 10 minutes</button>
