chore: some dashboard styling

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-    <div>
+    <div class="add-idea">
         <form>
             <mat-form-field>
                 <mat-label>New Idea</mat-label>
