--- a/src/app/shared/goal-card/goal-card.component.scss
+++ b/src/app/shared/goal-card/goal-card.component.scss
@@ -2,3 +2,14 @@
     display: flex;
     flex-direction: column;
 }
+
+.goal-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-content {
+    display: flex;
+    justify-content: center;
+}
